--- a/scss/main.scss
+++ b/scss/main.scss
@@ -284,14 +284,22 @@ main {
 	}
 
 	.sonntagsfrage-flex {
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		align-items: stretch;
 
-		fieldset {
-			border: none;
+		form {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+		}
+
+		div {
 			align-self: center;
+		}
+
+		label {
+			background: $primary-color;
+			color: white;
+			padding: 2rem;
 		}
 
 	}
@@ -346,7 +354,7 @@ main {
 }
 
 header {
-	background: $primary-color;
+	background: $secondary-color;
 	padding: 2rem 0;
 	margin-bottom: 3rem;
 
@@ -466,7 +474,7 @@ header {
 
 	.selected {
 		background: $color-gradient, $highlight-color !important;
-		
+
 		a {
 			color: white;
 		}
@@ -485,28 +493,29 @@ header {
 .clearfix:after {clear: both;}
 .clearfix {*zoom: 1;}
 
+.ausgabe-flex {
+
 
 
 .diagramm {
 	color: #fff;
-	padding: 15px;
-	animation: move 2s linear infinite;
+	padding: 1.5rem;
+	animation: move 2s ease-in-out;
+
+	@keyframes move {
+		from {
+			width: 0;
+		}
+		to {
+			width: 100%;
+		}
+	}
 }
 
-@keyframes move {
-	0% {
-		width: 0;
-	}
-	100% {
-		width: 100%;
-	}
-}
-
-.diagramm-linke {
-	background: #DC0000;
-}
+.diagramm-linke {background: #DC0000;}
 .diagramm-spd {background: #FE0000;}
 .diagramm-gruenen {background: #1FA12D;}
 .diagramm-fdp {background: #FBEB2C;}
 .diagramm-cdu {background: #000;}
 .diagramm-afd {background: #009EE0;}
+}
