optimaze sonntagsfrage form for mobile devices

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@ $secondary-color: #1e3145;
 $highlight-color: #e5007d;
 $navi-color: #459eca;
 $text-color: #565656;
+$light-gray: #eee;
 
 $color-gradient: linear-gradient(135deg, rgba(77, 176, 225, .5) 0%, transparent 100%);
 $white-gradient: linear-gradient(to bottom, white 75%, transparent 100%);
@@ -287,19 +288,54 @@ main {
 
 		form {
 			display: flex;
-			flex-direction: row;
+			flex-direction: column;
 			justify-content: space-between;
 			align-items: center;
+			flex-wrap: wrap;
+			//max-width: 100%;
+
+			@media (min-width: $screen-tablet) {
+				flex-direction: row;
+			}
 		}
 
-		div {
+		img {
+			width: 75%;
+			margin: 1rem auto;
+			display: block;
+		}
+
+		.partei-box {
 			align-self: center;
+			width: 25%;
+			max-width: 30rem;
+			background-color: transparent;
+			border: .1rem solid $light-gray;
+			margin: 1.5rem;
+			border-radius: .2rem;
+			width: 25rem;
+
+			&.-aktiv {
+				border: .1rem solid $highlight-color;
+			}
+		}
+
+		input[type="radio"] {
+			display: block;
+			margin: 3rem auto 1rem;
 		}
 
 		label {
-			background: $primary-color;
-			color: white;
+			color: $text-color;
+			text-align: center;
 			padding: 2rem;
+			display: block;
+		}
+
+		.submit {
+			margin: 2rem auto;
+			width: 100%;
+
 		}
 
 	}
