--- a/css/main.css
+++ b/css/main.css
@@ -188,15 +188,39 @@ main {
             padding-right: 4rem; } }
   .main-content .sonntagsfrage-flex form {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center; }
-  .main-content .sonntagsfrage-flex div {
-    align-self: center; }
+    align-items: center;
+    flex-wrap: wrap; }
+    @media (min-width: 768px) {
+      .main-content .sonntagsfrage-flex form {
+        flex-direction: row; } }
+  .main-content .sonntagsfrage-flex img {
+    width: 75%;
+    margin: 1rem auto;
+    display: block; }
+  .main-content .sonntagsfrage-flex .partei-box {
+    align-self: center;
+    width: 25%;
+    max-width: 30rem;
+    background-color: transparent;
+    border: 0.1rem solid #eee;
+    margin: 1.5rem;
+    border-radius: .2rem;
+    width: 25rem; }
+    .main-content .sonntagsfrage-flex .partei-box.-aktiv {
+      border: 0.1rem solid #e5007d; }
+  .main-content .sonntagsfrage-flex input[type="radio"] {
+    display: block;
+    margin: 3rem auto 1rem; }
   .main-content .sonntagsfrage-flex label {
-    background: #4db0e1;
-    color: white;
-    padding: 2rem; }
+    color: #565656;
+    text-align: center;
+    padding: 2rem;
+    display: block; }
+  .main-content .sonntagsfrage-flex .submit {
+    margin: 2rem auto;
+    width: 100%; }
   .main-content .btn {
     color: white;
     text-transform: uppercase;
